fix: permissão de CORS e métodos OPTIONS para desenvolvimento local